--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/domain-js/boilerplate/issues"
   },
-  "homepage": "https://github.com/domain-js/boilerplate#readme"
+  "homepage": "https://github.com/domain-js/boilerplate#readme",
+  "dependencies": {
+    "@domain.js/main": "^0.1.0"
+  }
 }
