--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest ./src --coverage",
+    "build": "tsc",
     "autoLoad": "domain-cli loadDeps . ts && domain-cli loadServices . ts && domain-cli deepLoadModule ./src/services/_schemas ./src/services/schemas.ts"
   },
   "repository": {
