--- a/package.json
+++ b/package.json
@@ -24,12 +24,34 @@
   },
   "homepage": "https://github.com/domain-js/boilerplate#readme",
   "dependencies": {
-    "@domain.js/main": "^0.1.2",
+    "@domain.js/main": "^0.1.3",
     "gm": "^1.23.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.3.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "type-fest": "^2.8.0",
+    "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.1.0",
+    "codecov": "^3.8.3",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.21.4",
+    "husky": "^7.0.0",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
+    "sequelize-json-schema": "^2.1.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "prettier": {
