--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gm": "^1.23.1",
     "lodash": "^4.17.21",
     "prettier": "^2.3.0",
+    "sequelize": "6.12.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "type-fest": "^2.8.0",
