--- a/package.json
+++ b/package.json
@@ -24,15 +24,9 @@
   },
   "homepage": "https://github.com/domain-js/boilerplate#readme",
   "dependencies": {
-    "@domain.js/main": "^0.1.3",
+    "@domain.js/main": "^0.1.5",
     "gm": "^1.23.1",
-    "lodash": "^4.17.21",
-    "prettier": "^2.3.0",
-    "sequelize": "6.12.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "type-fest": "^2.8.0",
-    "typescript": "^4.5.2"
+    "text-table": "^0.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.22.0",
