引入 ModelBase 基类,解决 getByPk, getByPks 的问题,未来也可以添加其他的基础函数

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@domain.js/main": "^0.1.5",
     "@types/text-table": "^0.2.2",
     "gm": "^1.23.1",
+    "lodash": "^4.17.21",
     "text-table": "^0.2.0"
   },
   "devDependencies": {
