改进 service/schema 的写法

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest ./src --coverage",
-    "build": "tsc",
+    "build": "tsc && cp ./src/domain/deps/cia/defines/simples.csv ./dist/domain/deps/cia/defines/simples.csv",
     "autoLoad": "domain-cli loadDeps . ts && domain-cli loadServices . ts && domain-cli deepLoadModule ./src/services/_schemas ./src/services/schemas.ts"
   },
   "repository": {
