config 囊括 domain和server,因此提升一级目录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "strict": true,
     "rootDir": "./src"
   },
+  "include": ["./src/domain", "./src/service", "src/configs"],
   "exclude": ["./domain/**/*.test.ts", "./domain/**/samples/*", "node_modules", "dist"]
 }
